First commited as before_88133_rev3

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -877,7 +877,6 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
-CreateBranchPage_NormalizeBranchName=Normalize branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -1284,13 +1283,17 @@ RepositoriesViewLabelProvider_TagsNodeText=Tags
 
 DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tracking branch
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
+DialogsPreferencePage_ShowInfoGroupHeader=Show result dialogs after git remote operations
+DialogsPreferencePage_ShowFetchInfoDialog=&Fetch Result Dialog
+DialogsPreferencePage_ShowPushInfoDialog=&Push Result Dialog
+DialogsPreferencePage_ShowTooltip=If unchecked, the result dialog will not be shown automatically. It will still be available via the progress view.
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
-DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when switching branches
+DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running &launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
-DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
-DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
+DialogsPreferencePage_ShowCheckoutConfirmation=Chec&kout confirmation
+DialogsPreferencePage_ShowCloneFailedDialog=Clo&ne failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
