First commited as before_88133_rev4

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -877,7 +877,6 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
-CreateBranchPage_NormalizeBranchName=Normalize branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -1020,6 +1019,8 @@ ProjectsPreferencePage_AutoShareProjects=Automatically share projects located in
 ProjectsPreferencePage_RestoreBranchProjects=Track each branch's imported projects and restore on checkout
 ProjectsPreferencePage_AutoIgnoreDerivedResources=Automatically ignore derived resources by adding them to .gitignore
 
+RefreshPreferencesPage_RefreshIndexInterval=Refre&sh interval (seconds):
+RefreshPreferencesPage_RefreshIndexIntervalTooltip=0 is equivalent to no refresh
 RefreshPreferencesPage_RefreshOnlyWhenActive=Refresh only when workbench is &active
 RefreshPreferencesPage_RefreshWhenIndexChange=Refresh resources when &index changes
 RefUpdateElement_CommitCountDecoration=({0})
