--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1283,13 +1283,17 @@ RepositoriesViewLabelProvider_TagsNodeText=Tags
 
 DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tracking branch
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
+DialogsPreferencePage_ShowInfoGroupHeader=Show result dialogs after git remote operations
+DialogsPreferencePage_ShowFetchInfoDialog=&Fetch Result Dialog
+DialogsPreferencePage_ShowPushInfoDialog=&Push Result Dialog
+DialogsPreferencePage_ShowTooltip=If unchecked, the result dialog will not be shown automatically. It will still be available via the progress view.
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
-DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when switching branches
+DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running &launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
-DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
-DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
+DialogsPreferencePage_ShowCheckoutConfirmation=Chec&kout confirmation
+DialogsPreferencePage_ShowCloneFailedDialog=Clo&ne failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
