--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2016 Shawn Pearce and others.
+# Copyright (c) 2005, 2016, 2017 Shawn Pearce and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -19,6 +19,7 @@
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
 #    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
 #    Denis Zygann <d.zygann@web.de>           - 473919 Add tooltip text for sorting files action
+#    Wim Jongman <wim.jongman@remainsoftware.com - 358152
 #    Jaxsun McCarthy Huggan <jaxsun.mccarthy@tasktop.com> - 509181 add change to local branch radio button
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
@@ -1022,6 +1023,8 @@ ProjectsPreferencePage_AutoShareProjects=Automatically share projects located in
 ProjectsPreferencePage_RestoreBranchProjects=Track each branch's imported projects and restore on checkout
 ProjectsPreferencePage_AutoIgnoreDerivedResources=Automatically ignore derived resources by adding them to .gitignore
 
+RefreshPreferencesPage_RefreshIndexInterval=Refre&sh interval (seconds):
+RefreshPreferencesPage_RefreshIndexIntervalTooltip=0 is equivalent to no refresh
 RefreshPreferencesPage_RefreshOnlyWhenActive=Refresh only when workbench is &active
 RefreshPreferencesPage_RefreshWhenIndexChange=Refresh resources when &index changes
 RefUpdateElement_CommitCountDecoration=({0})
@@ -1384,6 +1387,7 @@ GitSelectRepositoryPage_PleaseSelectMessage=Please select a repository from the 
 GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
 GitSelectWizardPage_ImportExistingButton=Import &existing Eclipse projects
 GitSelectWizardPage_ProjectCreationHeader=Wizard for project import
+GitSelectWizardPage_Selected=({0} selected)
 GitSelectWizardPage_UseNewProjectsWizardButton=Import using the New &Project wizard
 ConfigurationChecker_checkConfiguration=Check Configuration
 ConfigurationChecker_homeNotSet=\
@@ -1731,6 +1735,7 @@ SkipRebaseCommand_JobName=Skipping commit during Rebase
 
 ValidationUtils_CanNotResolveRefMessage=Cannot resolve {0}
 ValidationUtils_InvalidRefNameMessage={0} is not a valid name for a ref
+ValidationUtils_InvalidRevision=Invalid revision {0}
 ValidationUtils_RefAlreadyExistsMessage=Ref {0} already exists
 ValidationUtils_RefNameConflictsWithExistingMessage=Name conflicts with existing refs: {0}
 ValidationUtils_PleaseEnterNameMessage=Please enter a name
