First commited as after_88434_rev1

--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -111,6 +111,7 @@ GitProjectSetCapability_ExportNoRemote=No remote URL configured for current bran
 
 CloneOperation_failed_cleanup=Clone operation failed, with failed cleanup: {0}. Manual cleanup may be required.
 CloneOperation_title=Cloning from {0}
+CloneOperation_configuring=Configuring the clone...
 CreateLocalBranchOperation_CreatingBranchMessage=Creating branch {0}
 CreatePatchOperation_repoRequired=A repository is required  to create a patch
 CreatePatchOperation_cannotCreatePatchForMergeCommit=Cannot create patch for merge commit
