--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2016 Shawn Pearce and others.
+# Copyright (c) 2005, 2016, 2017 Shawn Pearce and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -19,6 +19,7 @@
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
 #    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
 #    Denis Zygann <d.zygann@web.de>           - 473919 Add tooltip text for sorting files action
+#    Wim Jongman <wim.jongman@remainsoftware.com - 358152
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -877,6 +878,7 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
+CreateBranchPage_NormalizeBranchName=Normalize branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -1019,6 +1021,8 @@ ProjectsPreferencePage_AutoShareProjects=Automatically share projects located in
 ProjectsPreferencePage_RestoreBranchProjects=Track each branch's imported projects and restore on checkout
 ProjectsPreferencePage_AutoIgnoreDerivedResources=Automatically ignore derived resources by adding them to .gitignore
 
+RefreshPreferencesPage_RefreshIndexInterval=Refre&sh interval (seconds):
+RefreshPreferencesPage_RefreshIndexIntervalTooltip=0 is equivalent to no refresh
 RefreshPreferencesPage_RefreshOnlyWhenActive=Refresh only when workbench is &active
 RefreshPreferencesPage_RefreshWhenIndexChange=Refresh resources when &index changes
 RefUpdateElement_CommitCountDecoration=({0})
@@ -1381,6 +1385,7 @@ GitSelectRepositoryPage_PleaseSelectMessage=Please select a repository from the 
 GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
 GitSelectWizardPage_ImportExistingButton=Import &existing Eclipse projects
 GitSelectWizardPage_ProjectCreationHeader=Wizard for project import
+GitSelectWizardPage_Selected=({0} selected)
 GitSelectWizardPage_UseNewProjectsWizardButton=Import using the New &Project wizard
 ConfigurationChecker_checkConfiguration=Check Configuration
 ConfigurationChecker_homeNotSet=\
