--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -16,6 +16,7 @@ CherryPickOperation_cherryPicking=Running cherry-pick on commit {0}
 CommitFileRevision_pathNotIn=Path {1} not in commit {0}.
 CommitFileRevision_errorLookingUpPath=IO error looking up path {1} in {0}.
 ConfigureFetchAfterCloneTask_couldNotFetch=Could not fetch with refSpec {0}
+ConnectProviderOperation_autoIgnoreMetaData=Auto-ignore .metadata and .recommenders if repository is located in Eclipse workspace
 ConnectProviderOperation_connecting=Connecting Git team provider.
 ConnectProviderOperation_ConnectingProject=Connecting project {0}
 ConnectProviderOperation_ConnectErrors=Connecting Git team provider failed. See log for details.
@@ -111,7 +112,6 @@ GitProjectSetCapability_ExportNoRemote=No remote URL configured for current bran
 
 CloneOperation_failed_cleanup=Clone operation failed, with failed cleanup: {0}. Manual cleanup may be required.
 CloneOperation_title=Cloning from {0}
-CloneOperation_configuring=Configuring the clone...
 CreateLocalBranchOperation_CreatingBranchMessage=Creating branch {0}
 CreatePatchOperation_repoRequired=A repository is required  to create a patch
 CreatePatchOperation_cannotCreatePatchForMergeCommit=Cannot create patch for merge commit
