First commited as before_88545_rev7

--- a/org.eclipse.egit.mylyn.ui.test/pom.xml
+++ b/org.eclipse.egit.mylyn.ui.test/pom.xml
@@ -25,7 +25,7 @@
   <name>EGit Mylyn UI Test Plug-in</name>
 
   <properties>
-    <uitest.vmparams>-Xmx512m -XX:MaxPermSize=256m</uitest.vmparams>
+    <uitest.vmparams>-Xmx512m</uitest.vmparams>
   </properties>
 
   <profiles>
