First commited as before_88711_rev2

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1019,6 +1019,8 @@ ProjectsPreferencePage_AutoShareProjects=Automatically share projects located in
 ProjectsPreferencePage_RestoreBranchProjects=Track each branch's imported projects and restore on checkout
 ProjectsPreferencePage_AutoIgnoreDerivedResources=Automatically ignore derived resources by adding them to .gitignore
 
+RefreshPreferencesPage_RefreshIndexInterval=Refre&sh interval (seconds):
+RefreshPreferencesPage_RefreshIndexIntervalTooltip=0 is equivalent to no refresh
 RefreshPreferencesPage_RefreshOnlyWhenActive=Refresh only when workbench is &active
 RefreshPreferencesPage_RefreshWhenIndexChange=Refresh resources when &index changes
 RefUpdateElement_CommitCountDecoration=({0})
