First commited as after_89157_rev1

--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -81,6 +81,7 @@ RepositoryPathChecker_errNoCloneCommand=Don't enter a clone command but a local 
 RepositoryPathChecker_errNoDirectory=Path {0} is not a directory
 RepositoryPathChecker_errNotAbsoluteRepoPath={0} is not an absolute directory path
 RepositoryPathChecker_errNoURL=Don't enter a URL but a local absolute path
+RepositoryUtil_autoIgnoreMetaData=Auto-ignore .metadata if repository is located in Eclipse workspace
 RepositoryUtil_DirectoryIsNotGitDirectory=Repository directory to configure does not look like a Git directory: {0}
 RepositoryUtil_noHead=NO-HEAD
 ResetOperation_performingReset=Performing {0} reset to {1}
