--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -92,8 +92,7 @@ ShowBlameHandler_JobName=Computing Revision Information
 GenerateHistoryJob_errorComputingHistory=Cannot compute Git history.
 GenerateHistoryJob_taskFoundMultipleCommits=Found {0} commits
 GenerateHistoryJob_taskFoundSingleCommit=Found 1 commit
-GerritConfigurationPage_BranchTooltipHover=Press {0} or start typing to see a filtered list of branch names
-GerritConfigurationPage_BranchTooltipStartTyping=Start typing to see a filtered list of branch names
+GerritConfigurationPage_BranchTooltipHover=Press {0} to see a filtered list of branch names
 GerritConfigurationPage_ConfigureFetchReviewNotes=Fetch will be auto-configured to fetch review notes from Gerrit.
 GerritConfigurationPage_errorBranchName=Branch name is required
 GerritConfigurationPage_groupFetch=Fetch configuration
@@ -877,7 +876,6 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
-CreateBranchPage_NormalizeBranchName=Normalize branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -915,8 +913,7 @@ PushTagsPage_TagsLabelNoneSelected=Tags:
 PushTagsPage_TagsLabelSelected=Tags ({0} selected):
 PushTagsWizard_WindowTitle=Push Tags
 PushToGerritPage_BranchLabel=Gerrit &Branch:
-PushToGerritPage_ContentProposalHoverText=Press {0} or start typing to see a filtered list of branch names
-PushToGerritPage_ContentProposalStartTypingText=Start typing to see a filtered list of branch names
+PushToGerritPage_ContentProposalHoverText=Press {0} to see a filtered list of branch names
 PushToGerritPage_Message=Select a Gerrit URI and branch name
 PushToGerritPage_MissingBranchMessage=Select a branch
 PushToGerritPage_MissingUriMessage=Select a URI
@@ -1020,8 +1017,6 @@ ProjectsPreferencePage_AutoShareProjects=Automatically share projects located in
 ProjectsPreferencePage_RestoreBranchProjects=Track each branch's imported projects and restore on checkout
 ProjectsPreferencePage_AutoIgnoreDerivedResources=Automatically ignore derived resources by adding them to .gitignore
 
-RefreshPreferencesPage_RefreshIndexInterval=Refre&sh interval (seconds):
-RefreshPreferencesPage_RefreshIndexIntervalTooltip=0 is equivalent to no refresh
 RefreshPreferencesPage_RefreshOnlyWhenActive=Refresh only when workbench is &active
 RefreshPreferencesPage_RefreshWhenIndexChange=Refresh resources when &index changes
 RefUpdateElement_CommitCountDecoration=({0})
@@ -1286,17 +1281,13 @@ RepositoriesViewLabelProvider_TagsNodeText=Tags
 
 DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tracking branch
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
-DialogsPreferencePage_ShowInfoGroupHeader=Show result dialogs after git remote operations
-DialogsPreferencePage_ShowFetchInfoDialog=&Fetch Result Dialog
-DialogsPreferencePage_ShowPushInfoDialog=&Push Result Dialog
-DialogsPreferencePage_ShowTooltip=If unchecked, the result dialog will not be shown automatically. It will still be available via the progress view.
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
-DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running &launches when switching branches
+DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
-DialogsPreferencePage_ShowCheckoutConfirmation=Chec&kout confirmation
-DialogsPreferencePage_ShowCloneFailedDialog=Clo&ne failed error
+DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
+DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
