First commited as after_90334_rev1

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -2410,6 +2410,17 @@
             </and>
          </activeWhen>
       </handler>
+      <handler
+            commandId="org.eclipse.egit.ui.commit.Checkout">
+         <class
+               class="org.eclipse.egit.ui.internal.commit.command.CheckoutHandler">
+         </class>
+         <activeWhen>
+            <with variable="activePart">
+               <instanceof value="org.eclipse.egit.ui.internal.commit.CommitEditor" />
+            </with>
+         </activeWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.views">
@@ -5966,7 +5977,6 @@
             name="%CreateBranchCommand">
       </command>
       <command
-            defaultHandler="org.eclipse.egit.ui.internal.commit.command.CheckoutHandler"
             id="org.eclipse.egit.ui.commit.Checkout"
             name="%CheckoutCommand">
       </command>
