First commited as after_90595_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1732,6 +1732,7 @@ SkipRebaseCommand_JobName=Skipping commit during Rebase
 
 ValidationUtils_CanNotResolveRefMessage=Cannot resolve {0}
 ValidationUtils_InvalidRefNameMessage={0} is not a valid name for a ref
+ValidationUtils_InvalidRevision=Invalid revision {0}
 ValidationUtils_RefAlreadyExistsMessage=Ref {0} already exists
 ValidationUtils_RefNameConflictsWithExistingMessage=Name conflicts with existing refs: {0}
 ValidationUtils_PleaseEnterNameMessage=Please enter a name
