--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -878,6 +878,7 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
+CreateBranchPage_NormalizeNameTooltip=Type {0} to get an auto-corrected branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -1116,6 +1117,7 @@ BranchRebaseMode_Interactive=Rebase interactively
 BranchRebaseMode_None=Merge
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
+BranchRenameDialog_NormalizeNameTooltip=Type {0} to get an auto-corrected branch name
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
 BranchRenameDialog_Title=Rename Branch
 BranchRenameDialog_WindowTitle=Rename Branch
