--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -40,11 +40,12 @@ Activator_refreshFailed=Failed to refresh projects from index changes
 Activator_setupFocusListener=Setting up the focus listener
 AddConfigEntryDialog_AddConfigTitle=Add a configuration entry
 AddConfigEntryDialog_ConfigKeyTooltip=Use "." to separate section/subsection/name, e.g. "core.bare", "remote.origin.url"
-AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value
-AddConfigEntryDialog_EnterValueMessage=Please enter a value
-AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by "."
+AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value.
+AddConfigEntryDialog_EnterValueMessage=Please enter a value.
+AddConfigEntryDialog_InvalidKeyMessage=Please enter a valid key: the first and the last component may contain only the letters [A-Za-z0-9] or the dash.
+AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by ".".
 AddConfigEntryDialog_KeyLabel=&Key
-AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key
+AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key.
 AddConfigEntryDialog_ValueLabel=&Value
 AddRemotePage_EnterRemoteNameMessage=Please enter a remote name
 AddRemotePage_RemoteNameAlreadyExistsError=Remote already exists
