--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -40,12 +40,11 @@ Activator_refreshFailed=Failed to refresh projects from index changes
 Activator_setupFocusListener=Setting up the focus listener
 AddConfigEntryDialog_AddConfigTitle=Add a configuration entry
 AddConfigEntryDialog_ConfigKeyTooltip=Use "." to separate section/subsection/name, e.g. "core.bare", "remote.origin.url"
-AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value.
-AddConfigEntryDialog_EnterValueMessage=Please enter a value.
-AddConfigEntryDialog_InvalidKeyMessage=Please enter a valid key: the first and the last component may contain only the letters [A-Za-z0-9] or the dash, and the last component must start with a letter.
-AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by ".".
+AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value
+AddConfigEntryDialog_EnterValueMessage=Please enter a value
+AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by "."
 AddConfigEntryDialog_KeyLabel=&Key
-AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key.
+AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key
 AddConfigEntryDialog_ValueLabel=&Value
 AddRemotePage_EnterRemoteNameMessage=Please enter a remote name
 AddRemotePage_RemoteNameAlreadyExistsError=Remote already exists
@@ -879,7 +878,6 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
-CreateBranchPage_NormalizeNameTooltip=Type {0} to get an auto-corrected branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -1118,7 +1116,6 @@ BranchRebaseMode_Interactive=Rebase interactively
 BranchRebaseMode_None=Merge
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
-BranchRenameDialog_NormalizeNameTooltip=Type {0} to get an auto-corrected branch name
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
 BranchRenameDialog_Title=Rename Branch
 BranchRenameDialog_WindowTitle=Rename Branch
