First commited as after_91503_rev2

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1842,6 +1842,7 @@ StagingView_Refresh=Refresh
 StagingView_GetRepo=Updating Repository Information
 StagingView_ReplaceWith=Rep&lace With
 StagingView_LinkSelection=Link with Editor and Selection
+StagingView_rebaseContinueHint=All conflicts fixed, you may now continue rebase
 StagingView_replaceWithFileInGitIndex=Replace with &Index
 StagingView_replaceWithHeadRevision=Replace with &HEAD Revision
 StagingView_UnstageItemMenuLabel=&Remove from Index
