--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -878,6 +878,7 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
+CreateBranchPage_NormalizName=Normalize to a valid name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
