--- a/org.eclipse.egit.ui/pom.xml
+++ b/org.eclipse.egit.ui/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.6.1-SNAPSHOT</version>
+    <version>4.6.1.201703071140-r</version>
   </parent>
 
   <artifactId>org.eclipse.egit.ui</artifactId>
