First commited as before_94786_rev3

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1105,7 +1105,7 @@ BranchOperationUI_CheckoutRemoteTrackingAsLocal=Checkout as New Local Branch
 BranchOperationUI_CheckoutRemoteTrackingCommit=Checkout Commit
 BranchOperationUI_CheckoutRemoteTrackingQuestion=If you want to work on the branch, a new local branch has to be created and checked out.\n\nIf you just want to have a look at the state of the branch, the commit of the remote-tracking branch can be checked out.
 BranchOperationUI_CheckoutRemoteTrackingTitle=Check out remote-tracking branch
-BranchOperationUI_Continue=Continue
+BranchOperationUI_Continue=&Continue
 BranchOperationUI_DetachedHeadTitle=Detached HEAD
 BranchOperationUI_DetachedHeadMessage=You are in the 'detached HEAD' state. This means that you don't have a local branch checked out.\n\nYou can look around, but it's not recommended to commit changes. The reason is that these commits would not be on any branch and would not be visible after checking out another branch.\n\nIf you want to make changes, create or checkout a local branch first.
 LaunchFinder_RunningLaunchDontShowAgain=Don't show this warning again
@@ -1803,9 +1803,9 @@ StagingView_Ammend_Previous_Commit=Amend (Edit Previous Commit)
 StagingView_Add_Signed_Off_By=Add Signed-off-by
 StagingView_Add_Change_ID=Add Change-Id
 StagingView_cancelCommitAfterSaving=Do you want to cancel the commit, so you can first handle (e.g. stage) the newly saved files?
-StagingView_Commit=&Commit
+StagingView_Commit=Commit
 StagingView_CommitToolTip=Commit ({0})
-StagingView_CommitAndPush=Commit and &Push...
+StagingView_CommitAndPush=Commit and Push...
 StagingView_checkoutFailed=Checking out files failed
 StagingView_commitFailed=Commit failed
 StagingView_committingNotPossible=Committing is not possible
