First commited as before_96245_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -541,7 +541,6 @@ RefContentProposal_trackingBranch=tracking branch
 RefContentProposal_tree=tree
 RefContentProposal_unknownObject=locally unknown object
 ReflogView_DateColumnHeader=Date
-ReflogView_ErrorOnLoad=Loading the reflog encountered an error; see the Error Log for more information
 ReflogView_ErrorOnOpenCommit=Error opening commit
 ReflogView_MessageColumnHeader=Reflog Message
 ReflogView_CommitColumnHeader=Commit
@@ -829,7 +828,13 @@ CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
 CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
+SpellcheckableMessageArea_redo=Redo
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
+SpellcheckableMessageArea_undo=Undo
+SpellCheckingMessageArea_copy=&Copy
+SpellCheckingMessageArea_cut=C&ut
+SpellCheckingMessageArea_paste=&Paste
+SpellCheckingMessageArea_selectAll=Select &All
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
 CommitMessageComponent_MessageInvalidCommitter=Invalid committer specified. Example: C O Mitter <committer@example.com>
 CommitMessageComponent_AmendingCommitInRemoteBranch=The commit being amended has already been published to a remote branch.
@@ -953,7 +958,6 @@ FetchGerritChangePage_ContentAssistDescription=Patch set {0} of change {1}
 FetchGerritChangePage_ContentAssistTooltip=Press {0} to see a filtered list of changes
 FetchGerritChangePage_CreatingBranchTaskName=Creating branch
 FetchGerritChangePage_CreatingTagTaskName=Creating tag
-FetchGerritChangePage_FetchingRemoteRefsMessage=Fetching remote refs from {0}
 FetchGerritChangePage_FetchingTaskName=Fetching change {0}
 FetchGerritChangePage_GeneratedTagMessage=Generated for Gerrit change {0}
 FetchGerritChangePage_GetChangeTaskName=Get change from Gerrit
@@ -962,7 +966,7 @@ FetchGerritChangePage_LocalBranchCheckout=Check out new branch
 FetchGerritChangePage_MissingChangeMessage=Please provide a change
 FetchGerritChangePage_PageMessage=Please select a Gerrit URI and change to fetch
 FetchGerritChangePage_PageTitle=Fetch a change from Gerrit into repository {0}
-FetchGerritChangePage_ShowingProposalsJobName=Showing proposals
+FetchGerritChangePage_RunInBackground=&Run in background
 FetchGerritChangePage_SuggestedRefNamePattern=change/{0}/{1}
 FetchGerritChangePage_TagNameText=Tag &name:
 FetchGerritChangePage_TagRadio=Create and check out a &tag
@@ -1654,7 +1658,6 @@ NewRemoteDialog_PushRadio=Configure &push
 NewRemoteDialog_RemoteAlreadyExistsMessage=Remote {0} already exists
 NewRemoteDialog_WindowTitle=New Remote
 NewRepositoryWizard_WizardTitle=Create a Git Repository
-NonBlockingWizardDialog_BackgroundJobName=Background Job ({0})
 NonDeletedFilesDialog_NonDeletedFilesMessage=The files below could not be deleted, \nperhaps because of some temporary file locks\nor because a directory represents a submodule
 NonDeletedFilesDialog_NonDeletedFilesTitle=Not deleted Files
 NonDeletedFilesDialog_RetryDeleteButton=&Retry delete
@@ -1742,7 +1745,7 @@ ValidationUtils_InvalidRefNameMessage={0} is not a valid name for a ref
 ValidationUtils_InvalidRevision=Invalid revision {0}
 ValidationUtils_RefAlreadyExistsMessage=Ref {0} already exists
 ValidationUtils_RefNameConflictsWithExistingMessage=Name conflicts with existing refs: {0}
-ValidationUtils_PleaseEnterNameMessage=Please enter a ref name
+ValidationUtils_PleaseEnterNameMessage=Please enter a name
 
 GitMergeEditorInput_CalculatingDiffTaskName=Calculating Differences
 GitMergeEditorInput_CheckingResourcesTaskName=Checking resources
