First commited as before_97137_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -827,8 +827,7 @@ CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
 CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
-CommitDialog_WrongTypeOfCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
-CommitDialog_ErrorCreatingCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} could not be created
+CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
@@ -1306,7 +1305,6 @@ DiffEditorPage_WarningNoDiffForMerge=Cannot compute diff for a merge commit.
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
 DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
-DiscardChangesAction_discardChangesButtonText=&Discard Changes
 Disconnect_disconnect=Disconnect
 
 GitCompareEditorInput_CompareResourcesTaskName=Comparing Resources
@@ -1479,15 +1477,7 @@ CommitActionHandler_repository=Repository: {0}
 CommitEditor_couldNotShowRepository=Could not show repository
 CommitEditor_couldNotFindStashCommit=Could not find stash commit
 CommitEditor_couldNotGetStashIndex=Could not get stash index for commit ''{0}''
-CommitEditor_showGitRepo=Show Git Repository
-CommitEditor_toolbarApplyStash=Apply Stashed Changes
-CommitEditor_toolbarDeleteStash=Delete Stashed Commit...
-CommitEditor_toolbarCreateTag=Create Tag...
-CommitEditor_toolbarCreateBranch=Create Branch...
-CommitEditor_toolbarCheckOut=Check Out
-CommitEditor_toolbarCherryPick=Cherry-Pick...
-CommitEditor_toolbarRevert=Revert Commit
-CommitEditor_toolbarShowInHistory=Show in History
+CommitEditor_showGitRepo=Show Git repository
 CommitEditor_TitleHeaderCommit=Commit {0}
 CommitEditor_TitleHeaderStashedCommit=Stashed Commit {0}
 CommitEditorInput_Name={0} [{1}]
@@ -1812,7 +1802,7 @@ StagingView_Add_Change_ID=Add Change-Id
 StagingView_cancelCommitAfterSaving=Do you want to cancel the commit, so you can first handle (e.g. stage) the newly saved files?
 StagingView_Commit=&Commit
 StagingView_CommitToolTip=Commit ({0})
-StagingView_CommitAndPush=Co&mmit and Push...
+StagingView_CommitAndPush=Commit and &Push...
 StagingView_checkoutFailed=Checking out files failed
 StagingView_commitFailed=Commit failed
 StagingView_committingNotPossible=Committing is not possible
@@ -1949,5 +1939,3 @@ DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
 
 StagingViewPreferencePage_title=Staging View
 StagingViewPreferencePage_maxLimitListMode=Switch to compact mode if files number exceeds:
-
-CommandConfirmationHardResetDialog_resetButtonLabel=&Reset
